[package]
name = "course-calendar"
version = "0.1.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
url = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.3"
failure = "0.1.5"
